--- a/src/App/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/App/AppBundle/Resources/views/Default/index.html.twig
@@ -51,7 +51,7 @@
             </section>
             <section class="menu container">
                 <div class="col-md-8 col-md-offset-2">
-                    <div class="col-md-6">
+                    <div class="col-xs-6">
                         <a href="#ubicaciones" class="ancla">
                             <p class="title col-sm-12 text-center">La Iglesia</p>
                             <img src="{{asset('bundles/app/images/menu01.png')}}" alt="">
@@ -60,11 +60,11 @@
                         <p class="title col-sm-12 text-center">Av. Velez Sarsfield 1351</p>
                         <p class="title col-sm-12 text-center">20:30 hs.</p> -->
                     </div>
-                    <div class="col-md-6">
-                            <a href="#party" class="ancla">
-                                <p class="title col-sm-12 text-center">La Fiesta</p>
-                                <img src="{{asset('bundles/app/images/menu02.png')}}" alt="">
-                            </a>
+                    <div class="col-xs-6">
+                        <a href="#party" class="ancla">
+                            <p class="title col-sm-12 text-center">La Fiesta</p>
+                            <img src="{{asset('bundles/app/images/menu02.png')}}" alt="">
+                        </a>
                           <!--   <p class="title col-sm-12 text-center">Calima Eventos</p>
                             <p class="title col-sm-12 text-center">Olga Cossettini 830, Buenos Aires</p>
                             <p class="title col-sm-12 text-center">22:00 hs.</p> -->
