--- a/src/App/AppBundle/Resources/public/css/style.css
+++ b/src/App/AppBundle/Resources/public/css/style.css
@@ -24,7 +24,9 @@
     width: 100%; }
     @media (min-width: 0px) and (max-width: 767px) {
       .top img {
-        margin-top: 0px !important; } }
+        margin-top: 0px !important;
+        border-bottom: 4px solid #FCC949;
+        border-top: 4px solid #FCC949; } }
   .top .contCount {
     position: absolute;
     bottom: 0px;
@@ -328,6 +330,9 @@
     font-weight: lighter;
     text-align: center;
     font-size: 23px; }
+    @media (min-width: 0px) and (max-width: 767px) {
+      .ubicaciones .block .info {
+        font-size: 18px; } }
     .ubicaciones .block .info p {
       padding: 20px 0;
       margin: 0; }
@@ -336,6 +341,9 @@
     .ubicaciones .block .info b {
       display: block;
       font-size: 20px; }
+      @media (min-width: 0px) and (max-width: 767px) {
+        .ubicaciones .block .info b {
+          font-size: 17px; } }
   .ubicaciones .block .fa {
     color: white;
     font-size: 25px; }
