--- a/src/App/AppBundle/Resources/public/sass/style.scss
+++ b/src/App/AppBundle/Resources/public/sass/style.scss
@@ -31,6 +31,8 @@
         margin-top: -60px;
         @include mobile {
             margin-top: 0px!important;
+            border-bottom: 4px solid #FCC949;
+    		border-top: 4px solid #FCC949;
         }
         width:100%;
 	}
@@ -374,7 +376,6 @@
 	padding-top:50px;
 	padding-bottom:50px;
 	background:#f7d379;
-
 	.block{
 		h2{
 			color:white;
@@ -391,6 +392,9 @@
 			font-weight: lighter;
 			text-align:center;
 			font-size: 23px;
+			@include mobile{
+				font-size:18px;
+			}
 			p{
 				padding: 20px 0;
 				margin: 0;
@@ -401,6 +405,9 @@
 			b{
 				display:block;
 				font-size: 20px;
+				@include mobile{
+					font-size:17px;
+				}
 			}
 		}
 		.fa{
