--- a/src/App/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/App/AppBundle/Resources/views/Default/index.html.twig
@@ -27,12 +27,12 @@
                             {% endif %}
                         </div>
                         {% if nombre != 'nada'%}
-                        <div class="ctaConfirm col-md-12 hidden-xs">
+                        <div class="ctaConfirm col-md-12">
                             <a href="#confirmAsist"  class="col-md-6 col-md-offset-3 text-center ancla">
                                 ¿Confirman asistencia?
                             </a>
                         </div>
-                        <a href="#confirmAsist" class="down col-md-12 text-center ancla hidden-xs"><span class="glyphicon glyphicon-menu-down"></span></a>
+                        <a href="#confirmAsist" class="down col-md-12 text-center ancla"><span class="glyphicon glyphicon-menu-down"></span></a>
                         {% endif %}
                     </div>
                 </div>
