--- a/src/App/AppBundle/Resources/public/sass/style.scss
+++ b/src/App/AppBundle/Resources/public/sass/style.scss
@@ -288,21 +288,24 @@
 		overflow: hidden;
 		width: 25%;
 		padding: 20px;
-                @include mobile {
-                    width: 160px;
-                    padding: 10px;
-                    margin-top:63px;
-                }
+        @include mobile {
+            width: 160px;
+            padding: 10px;
+            margin-top:63px;
+        } 
 		.btnConfirm{
 			color: white;
 			margin: 0 auto;
 			font-family: 'futura-light';
 			text-align: center;
 			font-size: 25px;
-                        @include mobile {
-                            font-size:17px;
-                        }
-                        
+		    background: none;
+		    border: none;
+		    width: 100%;
+		    height: 100%;
+            @include mobile {
+                font-size:17px;
+            }
 		}
 	}
 }
