--- a/src/App/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/App/AppBundle/Resources/views/Default/index.html.twig
@@ -5,7 +5,20 @@
 {% endblock %}
 {% block body %}
 {% if msj != "" %}
-{{msj}}
+<div class="modal fade">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>{{msj}}</p>
+      </div>
+    </div>
+  </div>
+</div>
 {% endif %}
     <div class="container-fluid">
     	<div class="row">
@@ -205,15 +218,13 @@
                 },1000);
             
         });
-        // $(document).ready(function() {
-        //     $('#btnConfirm2').click(function(){
-        //         var dataString = 'id='+service;
-        //         $.ajax({
-        //             type: "GET",
-        //             url: "includes/update.php",
-        //             data: dataString,
-        //         });
-        //     });                 
-        // });   
+        $(document).ready(function() {
+            if('{{modal}}' == 'show'){
+                $('.modal').modal('show');
+            }
+        }); 
+        $('.modal').on('hidden.bs.modal', function () {
+            document.location.href = String( document.location.href ).replace( '?modal=show', "" );
+        });  
 	</script>
 {% endblock %}
