--- a/src/App/AppBundle/Resources/public/sass/style.scss
+++ b/src/App/AppBundle/Resources/public/sass/style.scss
@@ -480,14 +480,36 @@ footer{
 			font-family: 'Sacramento';
 			font-size: 80px;
 			padding: 10px 0;
-                        @include tablet {
-                            font-size: 60px;
-                        }
-                        @include mobile {
-                            font-size: 60px;
-                        }
+            @include tablet {
+                font-size: 60px;
+            }
+            @include mobile {
+                font-size: 60px;
+            }
 		}
 	}
-        
-        
+}
+
+.modal{
+	.modal-content{
+		height:50%;
+		font-size:2em;
+		border-radius:0;
+		background:rgba(255, 169, 0, 0.64);
+	}
+	.modal-header{
+		padding: 8px 10px;
+    	border: none;
+	}
+	.modal-body{
+		margin-top: -10px;
+	    text-align: center;
+	    font-family:'futura-light';
+	    color:white;
+	    padding:4% 15%;
+	}
+	.close{
+		opacity: .8;
+		color:white;
+	}
 }
