--- a/src/App/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/App/AppBundle/Resources/views/Default/index.html.twig
@@ -139,7 +139,8 @@
                         <div class="info">
                             <p class="iglesia">Basílica del Sagrado Corazón de Jesús <br>Av. Velez Sarsfield 1351, Barracas<br> Sábado 30 de Septiembre 20.30hs</p> 
                         </div>
-                        <a href="whatsapp://send?text=https://www.google.com.ar/maps/place/Basilica+del+Sagrado+Corazon+de+Jesus/@-34.6509379,-58.3923583,16.25z/data=!4m5!3m4!1s0x95bccb5c9be450e3:0x1f8fb272dc109536!8m2!3d-34.6510623!4d-58.3892193"><span class="fa fa-whatsapp"></span></a>
+                        {% set iglesia = 'https://www.google.com.ar/maps/place/Basilica+del+Sagrado+Corazon+de+Jesus/@-34.6509379,-58.3923583,16.25z/data=!4m5!3m4!1s0x95bccb5c9be450e3:0x1f8fb272dc109536!8m2!3d-34.6510623!4d-58.3892193' %}
+                        <a href="whatsapp://send?text={{iglesia}}"><span class="fa fa-whatsapp"></span></a>
                         <a href="mailto:?subject=Casamiento Sabri y Alexis&body=La ubicación de la Iglesia es https://www.google.com.ar/maps/place/Basilica+del+Sagrado+Corazon+de+Jesus/@-34.6509379,-58.3923583,16.25z/data=!4m5!3m4!1s0x95bccb5c9be450e3:0x1f8fb272dc109536!8m2!3d-34.6510623!4d-58.3892193">
                         <span class="fa fa-envelope"></span></a>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5519.894782891258!2d-58.3923583261413!3d-34.650937927127856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccb5c9be450e3%3A0x1f8fb272dc109536!2sBasilica+del+Sagrado+Corazon+de+Jesus!5e0!3m2!1ses!2sar!4v1499092221098" width="300" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
