--- a/src/App/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/App/AppBundle/Resources/views/Default/index.html.twig
@@ -134,12 +134,12 @@
             <section class="col-sm-12 ubicaciones" > 
                 <div class="container">   
                     <div class="col-md-6 block text-center" id="ubicaciones"> 
-                        <h2>La Iglesia</h2>
+                        <h2>La Iglesiadsadasdsa</h2>
                         <img src="{{asset('bundles/app/images/line03.png')}}" alt="" class="img-responsive">
                         <div class="info">
                             <p class="iglesia">Basílica del Sagrado Corazón de Jesús <br>Av. Velez Sarsfield 1351, Barracas<br> Sábado 30 de Septiembre 20.30hs</p> 
                         </div>
-                        {% set iglesia = 'https://www.google.com.ar/maps/place/Basilica++del++Sagrado++Corazon++de++Jesus/@-34.6509379,-58.3923583,16.25z/data=!4m5!3m4!1s0x95bccb5c9be450e3:0x1f8fb272dc109536!8m2!3d-34.6510623!4d-58.3892193' %}
+                        {% set iglesia = 'https://www.google.com.ar/maps/place/Basilica\+del\+Sagrado\+Corazon\+de\+Jesus/@-34.6509379,-58.3923583,16.25z/data=!4m5!3m4!1s0x95bccb5c9be450e3:0x1f8fb272dc109536!8m2!3d-34.6510623!4d-58.3892193' %}
                         <a href="whatsapp://send?text={{iglesia}}"><span class="fa fa-whatsapp"></span></a>
                         <a href="mailto:?subject=Casamiento Sabri y Alexis&body=La ubicación de la Iglesia es https://www.google.com.ar/maps/place/Basilica+del+Sagrado+Corazon+de+Jesus/@-34.6509379,-58.3923583,16.25z/data=!4m5!3m4!1s0x95bccb5c9be450e3:0x1f8fb272dc109536!8m2!3d-34.6510623!4d-58.3892193">
                         <span class="fa fa-envelope"></span></a>
