--- a/src/App/AppBundle/Resources/public/sass/style.scss
+++ b/src/App/AppBundle/Resources/public/sass/style.scss
@@ -28,10 +28,13 @@
 	max-height: 640px;
 	overflow: hidden;
 	img{
-        margin-top: -60px;
+        margin-top: 0;
         @include mobile {
             margin-top: 0px!important;
             border-bottom: 4px solid #FCC949;
+            height: 180px;
+		    width: 100%;
+		    object-fit: cover;
         }
         width:100%;
 	}
@@ -98,12 +101,13 @@
 			}
 			p{
 				font-family: 'Sacramento';
-				color: white;
+				color: black;
 				text-align: center;
 				// padding: 10px 0;
 				// font-weight: bold;
 				font-size: 50px;
 				@include mobile{
+					color: white;
 					text-shadow: 1px 2px 3px black;
 				}
 			}
@@ -246,18 +250,21 @@
 	    margin-right: -15px;
 	    position: absolute;
 	    width: 100%;
-	    top: -50%;
+	    top: 0;
 	    z-index: -10;
             @include tablet {
                 top: 0%;
             }
             @include mobile {
+            	width: auto;
+			    height: 100%;
+			    left: -315px;
                 top: 0%;
             }
 	}
 	.text{
 		z-index: 200;
-		margin: 0 auto;
+		margin: 0;
 		width: 60%;
                 @include mobile {
                     width:100%;
@@ -279,13 +286,14 @@
 		}
 	}
 	.Cta{
-		margin: 10% auto 0 auto;
+		margin: 8% 18%;
 		background: rgba(255,204,102,.8);
 		border-radius: 13px;
 		overflow: hidden;
 		width: 25%;
 		padding: 20px;
         @include mobile {
+			margin: 8% 27%;
             width: 160px;
             padding: 10px;
             margin-top:63px;
@@ -464,14 +472,24 @@ footer{
 	    transform: rotate(180deg);
 	}
 	.saludo{
-		position: absolute;
-		bottom: 30px;
-		margin: 0 auto;
-		width: 100%;
-		text-align:center;
+		    position: absolute;
+		    bottom: 120px;
+		    margin: 0 auto;
+		    width: 100%;
+		    text-align: center;
+		    margin-left: 50px;
+		    color: black;
+		    @include mobile{
+		    	bottom: 110px;
+		    	margin-left: 0px;
+		    	color:white;
+		    }
 		img{
 			width: 13%; 
 			margin: 0 auto;
+			@include mobile{
+				display:none;
+			}
 		}
 		p{
 			font-family: 'Sacramento';
