--- a/src/App/AppBundle/Resources/public/css/style.css
+++ b/src/App/AppBundle/Resources/public/css/style.css
@@ -26,12 +26,12 @@
       .top img {
         margin-top: 0px !important;
         border-bottom: 4px solid #FCC949;
-        height: 180px;
-        width: 100%;
+        height: 310px;
+        width: 160%;
         object-fit: cover; } }
   .top .contCount {
     position: absolute;
-    bottom: 0px;
+    bottom: -11px;
     left: 0px;
     padding: 0 10%;
     width: 100%;
@@ -148,7 +148,7 @@
       .top .welcome .ctaConfirm {
         display: none !important; } }
     .top .welcome .down .glyphicon {
-      margin-top: 50px;
+      margin-top: 10px;
       font-size: 40px;
       color: black;
       font-weight: lighter; }
@@ -218,7 +218,7 @@
       .confirmAsist .background {
         width: auto;
         height: 100%;
-        left: -315px;
+        left: -170px;
         top: 0%; } }
   .confirmAsist .text {
     z-index: 200;
@@ -240,6 +240,9 @@
     .confirmAsist .text img {
       margin-top: 10px;
       width: 50%; }
+      @media (min-width: 0px) and (max-width: 767px) {
+        .confirmAsist .text img {
+          display: none; } }
   .confirmAsist .Cta {
     margin: 8% 18%;
     background: rgba(255, 204, 102, 0.8);
