--- a/src/App/AppBundle/Resources/public/sass/style.scss
+++ b/src/App/AppBundle/Resources/public/sass/style.scss
@@ -32,15 +32,15 @@
         @include mobile {
             margin-top: 0px!important;
             border-bottom: 4px solid #FCC949;
-            height: 180px;
-		    width: 100%;
+            height: 310px;
+  			width: 160%;
 		    object-fit: cover;
         }
         width:100%;
 	}
 	.contCount{
 		position:absolute;
-		bottom: 0px; 
+		bottom: -11px; 
 		left: 0px;
 		padding: 0 10%;
 		width:100%;
@@ -178,7 +178,7 @@
 		}
 		.down{
 			.glyphicon{
-				margin-top: 50px;
+				margin-top: 10px;
 			    font-size: 40px;
 			    color: black;
 			    font-weight: lighter;
@@ -258,7 +258,7 @@
             @include mobile {
             	width: auto;
 			    height: 100%;
-			    left: -315px;
+			    left: -170px;
                 top: 0%;
             }
 	}
@@ -283,6 +283,9 @@
 		img{
 			margin-top: 10px;
 			width: 50%;
+			@include mobile{
+				display	:none;
+			}
 		}
 	}
 	.Cta{
