--- a/src/App/AppBundle/Resources/public/sass/style.scss
+++ b/src/App/AppBundle/Resources/public/sass/style.scss
@@ -278,6 +278,7 @@
 			font-family: 'futura-light';
                         @include mobile {
                             font-size:18px;
+                            font-weight: bold;
                         }
 		}
 		img{
