--- a/src/App/AppBundle/Resources/public/sass/style.scss
+++ b/src/App/AppBundle/Resources/public/sass/style.scss
@@ -502,9 +502,11 @@ footer{
 			padding: 10px 0;
             @include tablet {
                 font-size: 60px;
+                
             }
             @include mobile {
                 font-size: 60px;
+                margin: 0px 0 -81px;
             }
 		}
 	}
