--- a/src/App/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/App/AppBundle/Resources/views/Default/index.html.twig
@@ -126,6 +126,7 @@
                                 <p>Para nosotros lo más importante es tu presencia, pero si algo nos quieres obsequiar, con dinero lo sabremos apreciar.</p>
                                 <span>Banco Supervielle CA$ 82-2389650-3</span>
                                 <span>CBU 0270082320023896500038</span>
+                                <span>CUIL 20-34372672-5</span>
                             </div>
                         <img src="{{asset('bundles/app/images/line02.png')}}" alt="">
                     </div>
