se quita cbu a un invitado

--- a/src/App/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/App/AppBundle/Resources/views/Default/index.html.twig
@@ -111,7 +111,9 @@
                    {% endif %}                   
                 </div>
                 </div> 
-            </section>
+            </section>               
+                
+            {% if nombreCompleto != 'javieryromina'%}
             <section class="col-md-12 regalo">
                 <div class="row">
                     <div class="col-md-4">
@@ -132,6 +134,7 @@
                     </div>
                 </div>
             </section>
+            {% endif %}
             <section class="col-sm-12 ubicaciones" > 
                 <div class="container">   
                     <div class="col-md-6 block text-center" id="ubicaciones"> 
